test/conformance/kuttl/validate/clusterpolicy/standard/audit/background-match-roles/01-script-check-for-output.yaml
## Checks that there is specific output when creating a manifest

apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    if kubectl apply -f manifests.yaml 2>&1 | grep -q 'invalid variable used' 
    then 
        echo "Test succeeded. The phrase 'invalid variable used' is found."
        exit 0
    else 
        echo "Test failed. The phrase 'invalid variable used' has not been found."
        exit 1
    fi
